--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "burger-app",
+  "name": "sequelized-burger-app",
   "version": "1.0.0",
-  "description": "eat-da-burger!",
-  "main": "index.js",
+  "description": "eat-da-burger-sequel",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mkdoh3/burger-app.git"
+    "url": "git+https://github.com/mkdoh3/burger-sequel.git"
   },
+  "keywords": [
+    "burgers!"
+  ],
   "author": "Michael Doherty",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mkdoh3/burger-app/issues"
+    "url": "https://github.com/mkdoh3/burger-sequel/issues"
   },
-  "homepage": "https://github.com/mkdoh3/burger-app#readme",
+  "homepage": "https://github.com/mkdoh3/burger-sequel#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "i": "^0.3.6",
     "method-override": "^2.3.10",
-    "mysql": "^2.15.0"
+    "mysql2": "^1.5.1",
+    "sequelize": "^4.27.0"
   }
 }
